[package]
name = "backend-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
config = "0.13" # Untuk konfigurasi (opsional tapi disarankan)
log = "0.4"
env_logger = "0.10"